plugins {
    id 'dev.architectury.loom' version '1.13.469' apply false
    id 'architectury-plugin' version '3.4.164'
    id 'com.gradleup.shadow' version '8.3.11' apply false
    id 'org.moddedmc.wiki.toolkit' version '0.2.7'
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    group = rootProject.maven_group
    version = rootProject.mod_version
}

// Sinytra Wiki
wiki {
    docs {
        // The name of the object (examplemod) should match the registered wiki project ID (if it exists).
        simplyswords {
            // The path to the folder containing the documentation metadata file (sinytra-wiki.json)
            root = file('docs')
        }
    }
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'

    base {
        // Set up a suffixed format for the mod jar names, e.g. `example-fabric`.
        archivesName = "$rootProject.archives_name-$project.name"
    }

    repositories {
        // Add repositories to retrieve artifacts from in here.
        // You should only use this when depending on other mods because
        // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
        // See https://docs.gradle.org/current/userguide/declaring_repositories.html
        // for more information about repositories.
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
        mappings "net.fabricmc:yarn:$rootProject.yarn_mappings:v2"
    }

    java {
        // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
        // if it is present.
        // If you remove this line, sources will not be generated.
        withSourcesJar()

        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }

        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 17
    }

    tasks.withType(JavaExec).configureEach {
        javaLauncher = javaToolchains.launcherFor {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    // Configure Maven publishing.
    publishing {
        publications {
            mavenJava(MavenPublication) {
                artifactId = base.archivesName.get()
                from components.java
            }
        }

        // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
        repositories {
            // Add repositories to publish to here.
            // Notice: This block does NOT have the same function as the block in the top level.
            // The repositories here will be used for publishing your artifact, not for
            // retrieving dependencies.
        }
    }



    // Oracle Index related tasks
    tasks.named('processResources') {
        from("$rootDir/docs") {
            into "assets/oracle_index/books/simplyswords"
            exclude '.assets/item/**'   // items are rendered ingame as actual item components, no need to include them here
            exclude '.assets/simplyswords/unique-tooltips/**' // generated docs media; keep it out of the mod jar
            exclude 'introduction.mdx'   // Markdown heavy doc - not supported by Oracle Index
        }
        doLast {
            println "processResources executed: wiki folder copied into assets/oracle_index"
        }
    }

    // Parse all recipes and create corresponding .mdx files, along with a _meta.json.
    // Only supports crafting grid recipes. Revise this once moddedmc.wiki supports other recipe types.
    tasks.register('generateRecipeDocs') {
        def recipesDir = file("$rootDir/common/src/main/resources/data/simplyswords/recipe") // Path to recipes folder
        def outputDir = file("$rootDir/docs/generated") // Path to generate .mdx files

        inputs.dir(recipesDir)
        outputs.dir(outputDir)

        doLast {
            if (!recipesDir.exists()) {
                println "Recipes directory does not exist: $recipesDir"
                return
            }

            if (!outputDir.exists()) {
                outputDir.mkdirs()
            }

            // Predefined map to convert tags to default items
            def tagToItemMap = [
                    "c:wood_sticks": "stick" // Add more tag mappings here as needed
            ]

            def metaContent = [:] // Map to hold meta.json content

            recipesDir.listFiles().each { recipeFile ->
                if (recipeFile.name.endsWith('.json')) {
                    // Parse the JSON file
                    def recipeJson = new groovy.json.JsonSlurper().parse(recipeFile)

                    // Extract fields from the JSON
                    def result = recipeJson.result?.id ?: "unknown:unknown_item"
                    def pattern = recipeJson.pattern ?: []
                    def key = recipeJson.key ?: [:]
                    def slots = []

                    for (int i = 0; i < 3; i++) {
                        String row = i < pattern.size() ? pattern[i] : "   "

                        // Ensure the row is exactly 3 characters long
                        row = row.padRight(3, ' ').substring(0, 3)

                        for (int j = 0; j < 3; j++) {
                            char currentChar = row.charAt(j)
                            String charStr = currentChar.toString()

                            if (key.containsKey(charStr)) {
                                def keyEntry = key[charStr]
                                String item = ""

                                if (keyEntry.containsKey("item")) {
                                    item = keyEntry.item.replace('minecraft:', '')
                                } else if (keyEntry.containsKey("tag")) {
                                    String tag = keyEntry.tag
                                    item = tagToItemMap[tag] ?: "" // Substitute tag with predefined item or leave blank
                                }

                                slots.add(item)
                            } else if (charStr == ' ') {
                                slots.add('') // Add blank slot for spaces
                            } else {
                                println "Warning: Character '${charStr}' in pattern not found in key map. Adding blank slot."
                                slots.add('') // Add an empty slot for unrecognized characters
                            }
                        }
                    }

                    // Generate the title by capitalising words and removing underscores
                    def icon = result.split(':').join(':item/')
                    def title = result.split(':')[-1].capitalize()
                    def cleanedTitle = title.replaceAll('_', ' ').split(' ').collect { it.capitalize() }.join(' ')
                    def mdxFileName = "${title.toLowerCase()}.mdx"

                    // Add entry to metaContent
                    metaContent[mdxFileName] = cleanedTitle

                    // Prepare and write the MDX file
                    def mdxContent = """---
title: ${cleanedTitle}
icon: ${icon}
---

<CraftingRecipe
slots={${slots.collect { "'$it'" }}}
result="${result}"
/>
"""

                    def outputFile = new File(outputDir, mdxFileName)
                    outputFile.text = mdxContent
                    println "Generated: ${outputFile.absolutePath}"
                }
            }

            // Write the _meta.json file
            def metaFile = new File(outputDir, "_meta.json")
            metaFile.text = groovy.json.JsonOutput.prettyPrint(groovy.json.JsonOutput.toJson(metaContent))
            println "Generated: ${metaFile.absolutePath}"

            println "All .mdx files and _meta.json have been generated in: $outputDir"
        }
    }






}
